# three-layer-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  toy.py  toy_branching.py  toy_gepa_optimize.py  toy_loop_persist.py
fitness_coach/: README.md  __init__.py  evaluator.py  graph.py  methodology.py  optimize.py  run.py  schemas.py  signatures.py  straw_coach.py  synthetic.py
fitness_coach/tests/: test_evolve_state.py  test_methodology.py  test_schemas.py
